opam-version: "2.0"
maintainer: "anil@recoil.org"
authors: "Anil Madhavapeddy"
license: "ISC"
tags: ["org:mirage" "org:ocamllabs"]
homepage: "https://github.com/avsm/ezxmlm"
doc: "https://avsm.github.io/ezxmlm/"
bug-reports: "https://github.com/avsm/ezxmlm/issues"
depends: [
  "ocaml" {>= "4.02.3"}
  "dune" {build}
  "xmlm" {>= "1.1.0"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/avsm/ezxmlm.git"
