opam-version: "2.0"
maintainer: "anil@recoil.org"
authors: "Anil Madhavapeddy"
license: "ISC"
tags: ["org:mirage" "org:ocamllabs"]
homepage: "https://github.com/avsm/ezxmlm"
bug-reports: "https://github.com/avsm/ezxmlm/issues"
doc: "https://avsm.github.io/ezxmlm/"
dev-repo: "git+https://github.com/avsm/ezxmlm.git"
depends: [
  "ocaml" {>= "4.02.3"}
  "dune" {build & >= "1.0"}
  "xmlm" {>= "1.1.0"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
synopsis: "Combinators to use with xmlm for parsing and selection"
description: """  
An "easy" interface on top of the Xmlm library.  This version provides more
convenient (but far less flexible) input and output functions that go to and
from `string` values.  This avoids the need to write signal code, which is
useful for quick scripts that manipulate XML.

More advanced users should go straight to the Xmlm library and use it directly,
rather than be saddled with the Ezxmlm interface.  Since the types in this
library are more specific than Xmlm, it should interoperate just fine with it
if you decide to switch over.

* Online docs: <http://anil-code.recoil.org/ezxmlm>
* Source Code: <https://github.com/avsm/ezxmlm>
* Discussion: <https://discuss.ocaml.org> in the Ecosystem category
* Bugs: <https://github.com/avsm/ezxmlm/issues>
"""
