opam-version: "2.0"
maintainer: "anil@recoil.org"
authors: "Anil Madhavapeddy"
license: "ISC"
tags: ["org:mirage" "org:ocamllabs"]
homepage: "https://github.com/avsm/ezxmlm"
bug-reports: "https://github.com/avsm/ezxmlm/issues"
doc: "https://avsm.github.io/ezxmlm/"
dev-repo: "git+https://github.com/avsm/ezxmlm.git"
depends: [
  "ocaml" {>= "4.02.3"}
  "dune" {build & >= "1.0"}
  "xmlm" {>= "1.1.0"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
synopsis: "combinators for parsing and selection of XML structures"
description: """
An XML parser and serialisartion library written in pure OCaml.  Values can
be converted to and from channels or strings, and combinators exist to
query the XML values.
"""
